Solving the subdirectories size taking problem

--- a/17_05_20_TakeFileSystem_Composite_design_pattern/17_05_20_TakeFileSystem_Composite_design_pattern.csproj
+++ b/17_05_20_TakeFileSystem_Composite_design_pattern/17_05_20_TakeFileSystem_Composite_design_pattern.csproj
@@ -56,6 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FileSizeFormatter.cs" />
     <Compile Include="VModels\Component.cs" />
     <Compile Include="VModels\Branch.cs" />
     <Compile Include="VModels\Leaf.cs" />
